--- a/HomeWork_2/app/src/main/res/layout/board_view.xml
+++ b/HomeWork_2/app/src/main/res/layout/board_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -21,7 +21,7 @@
             android:id="@+id/title" app:layout_constraintStart_toEndOf="@+id/image"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="76dp"
             android:layout_height="55dp"
             android:focusable="true"
@@ -34,4 +34,4 @@
             app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintVertical_bias="0.504" app:backgroundTint="@color/colorWhite"/>
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
