--- a/HomeWork_2/app/src/main/res/layout/fragment_boards.xml
+++ b/HomeWork_2/app/src/main/res/layout/fragment_boards.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/boards_list"
             android:scrollbars="vertical"
             android:layout_width="match_parent"
@@ -19,7 +19,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="1.0"/>
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
@@ -33,4 +33,4 @@
             app:layout_constraintHorizontal_bias="0.977"
             android:src="@android:drawable/ic_input_add" app:backgroundTint="@color/colorWhite"/>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
