--- a/HomeWork_2/app/src/main/res/layout/task_list_item.xml
+++ b/HomeWork_2/app/src/main/res/layout/task_list_item.xml
@@ -1,28 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-           xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="match_parent"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:orientation="horizontal"
-            android:padding="7dp"
-            android:background="@color/colorGrey"
-            android:layout_height="55dp">
-    <TextView
-            android:id="@+id/task"
-            android:textSize="15sp"
-            android:paddingStart="7dp"
-            android:paddingEnd="7dp"
-            android:focusable="true"
-            android:longClickable="true"
-            android:textStyle="bold"
-            android:gravity="start|center"
-            android:background="@color/colorWhite"
-            android:layout_width="match_parent" android:layout_height="match_parent" tools:text="TEXT"/>
-    <ImageButton
-            android:id="@+id/delete_task"
-            android:src="@android:drawable/ic_delete"
-            android:background="@null"
-            android:layout_alignEnd="@id/task"
-            android:layout_width="37dp" android:layout_height="match_parent"/>
-</RelativeLayout>
+<TextView
+    android:id="@+id/task"
+    android:textSize="15sp"
+    android:layout_marginEnd="20dp"
+    android:layout_marginStart="20dp"
+    android:padding="7dp"
+    android:paddingStart="14dp"
+    android:paddingEnd="14dp"
+    android:focusable="true"
+    android:longClickable="true"
+    android:textStyle="bold"
+    android:gravity="start|center"
+    android:background="@drawable/grey_border"
+    android:layout_width="match_parent" android:layout_height="55dp"
+    xmlns:android="http://schemas.android.com/apk/res/android"/>
