--- a/HomeWork_2/app/src/main/res/values/colors.xml
+++ b/HomeWork_2/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGrey">#C0C0C0</color>
     <color name="colorBlack">#000000</color>
+    <color name="colorRed">#FF0000</color>
 </resources>
