--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,4 +27,8 @@
             </LinearLayout>
     </com.google.android.material.navigation.NavigationView>
 
+    <WebView
+            android:id="@+id/webview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 </androidx.drawerlayout.widget.DrawerLayout>
