--- a/app/src/main/res/layout/fragment_boards.xml
+++ b/app/src/main/res/layout/fragment_boards.xml
@@ -31,5 +31,11 @@
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.977"
             android:src="@android:drawable/ic_input_add" app:backgroundTint="@color/colorWhite"/>
-
+    <com.project.trello_fintech.views.CircularProgressBar
+            android:id="@+id/progressBar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="wrap_content" android:layout_height="wrap_content" />
 </androidx.constraintlayout.widget.ConstraintLayout>
