--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_height="match_parent"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:background="@drawable/task_background"
         android:id="@+id/tasks_layout"
         xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
     <com.woxthebox.draglistview.BoardView
             android:id="@+id/tasks"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" tools:layout_editor_absoluteY="708dp"
+            tools:layout_editor_absoluteX="0dp"/>
     <ImageView
             android:id="@+id/bucket"
             android:visibility="gone"
@@ -16,4 +16,11 @@
             android:src="@android:drawable/ic_menu_delete"
             android:background="@color/colorRed"
             android:layout_width="match_parent" android:layout_height="55dp" />
+    <com.project.trello_fintech.views.CircularProgressBar
+            android:id="@+id/progressBar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="wrap_content" android:layout_height="wrap_content" />
 </androidx.constraintlayout.widget.ConstraintLayout>
