--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -1,26 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:id="@+id/tasks_layout"
-        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
-    <com.woxthebox.draglistview.BoardView
-            android:id="@+id/tasks"
+<layout xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <data>
+        <import type="android.view.View" />
+        <variable name="viewModel"
+                  type="com.project.trello_fintech.view_models.TasksViewModel" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+            xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" tools:layout_editor_absoluteY="708dp"
-            tools:layout_editor_absoluteX="0dp"/>
-    <ImageView
-            android:id="@+id/bucket"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:src="@android:drawable/ic_menu_delete"
-            android:background="@color/colorRed"
-            android:layout_width="match_parent" android:layout_height="55dp" />
-    <com.project.trello_fintech.views.CircularProgressBar
-            android:id="@+id/progressBar"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_width="wrap_content" android:layout_height="wrap_content" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:id="@+id/tasks_layout"
+            xmlns:app="http://schemas.android.com/apk/res-auto">
+        <com.woxthebox.draglistview.BoardView
+                android:id="@+id/tasks"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" tools:layout_editor_absoluteY="708dp"
+                tools:layout_editor_absoluteX="0dp"/>
+        <ImageView
+                android:id="@+id/bucket"
+                android:visibility="@{viewModel.currentTaskId == null? View.GONE: View.VISIBLE}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:src="@android:drawable/ic_menu_delete"
+                android:background="@color/colorRed"
+                android:layout_width="match_parent" android:layout_height="55dp" />
+        <com.project.trello_fintech.views.CircularProgressBar
+                android:id="@+id/progressBar"
+                android:visibility="@{viewModel.isLoading? View.VISIBLE: View.GONE}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="wrap_content" android:layout_height="wrap_content" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
