swipe refresh layout for boards fragment

--- a/app/src/main/res/layout/fragment_boards.xml
+++ b/app/src/main/res/layout/fragment_boards.xml
@@ -7,7 +7,7 @@
                   type="com.project.trello_fintech.view_models.BoardsViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/fragment_boards"
@@ -46,5 +46,5 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="wrap_content" android:layout_height="wrap_content" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </layout>
