--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,34 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/fragment_container"
+        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent">
+
+    <RelativeLayout android:id="@+id/fragment_container"
+                  android:layout_width="match_parent" android:layout_height="match_parent" />
 
     <com.google.android.material.navigation.NavigationView
             android:id="@+id/nav_view"
             android:layout_gravity="end"
             android:layout_width="wrap_content"
             android:layout_height="match_parent">
-            <LinearLayout
-                    android:orientation="vertical"
-                    android:padding="5dp"
-                    android:layout_width="match_parent" android:layout_height="wrap_content">
-                <TextView
-                        android:text="@string/participants"
-                        android:textSize="15sp"
-                        android:textColor="@color/colorBlack"
-                        android:layout_width="wrap_content" android:layout_height="wrap_content" />
-                <fragment
-                        android:id="@+id/fragment_users"
-                        android:name="com.project.trello_fintech.fragments.UsersFragment"
-                        android:layout_width="wrap_content" android:layout_height="match_parent" />
-            </LinearLayout>
+            <fragment
+                    android:id="@+id/fragment_users"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:name="com.project.trello_fintech.fragments.UsersFragment"
+                    android:layout_width="wrap_content" android:layout_height="match_parent" />
+        <Button
+                android:id="@+id/trello_logout"
+                android:clickable="true"
+                android:focusable="true"
+                android:layout_gravity="bottom"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:text="@string/trello_logout"
+                android:layout_width="match_parent" android:layout_height="wrap_content"/>
     </com.google.android.material.navigation.NavigationView>
-
-    <WebView
-            android:id="@+id/webview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
 </androidx.drawerlayout.widget.DrawerLayout>
