--- a/app/src/main/res/layout/fragment_boards.xml
+++ b/app/src/main/res/layout/fragment_boards.xml
@@ -11,7 +11,7 @@
                                                        android:layout_height="match_parent">
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                 xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/fragment_boards"
+                android:id="@+id/boards_refresh_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
