--- a/app/src/main/res/layout/task_list_item.xml
+++ b/app/src/main/res/layout/task_list_item.xml
@@ -1,16 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
-    android:id="@+id/task"
-    android:textSize="15sp"
-    android:layout_marginEnd="20dp"
-    android:layout_marginStart="20dp"
-    android:padding="7dp"
-    android:paddingStart="14dp"
-    android:paddingEnd="14dp"
-    android:focusable="true"
-    android:longClickable="true"
-    android:textStyle="bold"
-    android:gravity="start|center"
-    android:background="@drawable/grey_border"
-    android:layout_width="match_parent" android:layout_height="55dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"/>
+<com.project.trello_fintech.views.InterceptTouchCardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                                         android:id="@+id/task"
+                                                         android:elevation="2dp"
+                                                         android:layout_marginEnd="20dp"
+                                                         android:layout_marginStart="20dp"
+                                                         android:layout_width="match_parent" android:layout_height="wrap_content">
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent" android:layout_height="match_parent">
+        <TextView
+                android:id="@+id/task_title"
+                android:textSize="15sp"
+                android:padding="7dp"
+                android:paddingStart="14dp"
+                android:paddingEnd="14dp"
+                android:textStyle="bold"
+                android:gravity="start|center"
+                android:layout_width="match_parent" android:layout_height="55dp" />
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent" android:layout_height="wrap_content">
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/attachments_preview"
+                    android:layout_width="wrap_content" android:layout_height="wrap_content" />
+            <TextView
+                    android:id="@+id/plus_n_attachments_also"
+                    android:paddingStart="5dp"
+                    android:paddingEnd="5dp"
+                    android:gravity="center"
+                    android:layout_width="match_parent" android:layout_height="match_parent" />
+        </LinearLayout>
+    </LinearLayout>
+</com.project.trello_fintech.views.InterceptTouchCardView>
