--- a/app/src/main/res/layout/fragment_task_detail.xml
+++ b/app/src/main/res/layout/fragment_task_detail.xml
@@ -19,7 +19,7 @@
                 android:paddingBottom="25dp">
             <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
-                    app:title="@{viewModel.taskText}"
+                    app:title="@{viewModel.task.text}"
                     app:layout_constraintTop_toTopOf="parent"
                     android:layout_width="match_parent" android:layout_height="wrap_content" />
         </com.google.android.material.appbar.AppBarLayout>
@@ -33,26 +33,25 @@
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-                <androidx.cardview.widget.CardView
-                        app:cardBackgroundColor="@color/colorWhite"
-                        android:clickable="false"
-                        android:elevation="10dp"
-                        android:layout_width="match_parent" android:layout_height="wrap_content">
-                    <LinearLayout
-                            android:orientation="horizontal"
-                            android:layout_width="match_parent" android:layout_height="wrap_content">
-                        <ImageView
-                                android:src="@drawable/attachment_icon"
-                                android:layout_width="50dp" android:layout_height="50dp" />
-                        <TextView
-                                android:text="@string/attachments"
-                                android:textColor="@color/colorBlack"
-                                android:layout_gravity="center_vertical"
-                                android:textSize="15sp"
-                                android:textStyle="bold"
-                                android:layout_width="match_parent" android:layout_height="wrap_content" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
+                <com.project.trello_fintech.views.TaskDetailSectionView
+                        app:iconSrc="@drawable/description_icon"
+                        app:text="Описание"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/description"
+                        android:text="@={viewModel.task.description}"
+                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:hint="@string/no_description"
+                        android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
+                        android:minHeight="50dp" />
+                <com.project.trello_fintech.views.TaskDetailSectionView
+                        app:iconSrc="@drawable/attachment_icon"
+                        app:text="@string/attachments"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
                 <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/attachments"
                         android:layout_width="match_parent" android:layout_height="wrap_content"/>
