--- a/app/src/main/res/layout/fragment_task_detail.xml
+++ b/app/src/main/res/layout/fragment_task_detail.xml
@@ -2,6 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <import type="android.view.View" />
         <variable name="viewModel" type="com.project.trello_fintech.view_models.TaskDetailViewModel" />
     </data>
 
@@ -55,6 +56,11 @@
                 <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/attachments"
                         android:layout_width="match_parent" android:layout_height="wrap_content"/>
+                <Button
+                        android:id="@+id/task_history"
+                        android:drawableLeft="?attr/actionModePasteDrawable"
+                        android:text="@string/changes_history"
+                        android:layout_width="match_parent" android:layout_height="wrap_content"/>
             </LinearLayout>
         </ScrollView>
 
@@ -67,5 +73,14 @@
                 android:divider="@null"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content" />
+
+        <com.project.trello_fintech.views.CircularProgressBar
+                android:visibility="@{viewModel.isLoading? View.VISIBLE: View.GONE}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
