Search task by entered text

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,5 +4,6 @@
             android:id="@+id/drawer"
             android:title="nav"
             app:showAsAction="always"
+            android:orderInCategory="1"
             android:icon="@android:drawable/ic_menu_more"/>
 </menu>
