--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent">
 
-    <RelativeLayout android:id="@+id/fragment_container"
+    <FrameLayout android:id="@+id/fragment_container"
                   android:layout_width="match_parent" android:layout_height="match_parent" />
 
     <com.google.android.material.navigation.NavigationView
