--- a/app/src/main/res/layout/task_list_item.xml
+++ b/app/src/main/res/layout/task_list_item.xml
@@ -6,6 +6,7 @@
                                                          android:layout_marginStart="20dp"
                                                          android:layout_width="match_parent" android:layout_height="wrap_content">
     <LinearLayout
+            android:id="@+id/wrapper"
             android:orientation="vertical"
             android:background="@drawable/grey_border"
             android:layout_width="match_parent" android:layout_height="match_parent">
