--- a/app/src/main/res/layout/task_list_item.xml
+++ b/app/src/main/res/layout/task_list_item.xml
@@ -7,6 +7,7 @@
                                                          android:layout_width="match_parent" android:layout_height="wrap_content">
     <LinearLayout
             android:id="@+id/wrapper"
+            android:padding="5dp"
             android:orientation="vertical"
             android:background="@drawable/grey_border"
             android:layout_width="match_parent" android:layout_height="match_parent">
@@ -21,17 +22,27 @@
                 android:minHeight="55dp"
                 android:layout_width="match_parent" android:layout_height="wrap_content" />
         <LinearLayout
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:layout_width="match_parent" android:layout_height="wrap_content">
-            <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/attachments_preview"
-                    android:layout_width="wrap_content" android:layout_height="wrap_content" />
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent" android:layout_height="wrap_content">
+                <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/attachments_preview"
+                        android:layout_width="wrap_content" android:layout_height="wrap_content" />
+                <TextView
+                        android:id="@+id/plus_n_attachments_also"
+                        android:paddingStart="5dp"
+                        android:paddingEnd="5dp"
+                        android:gravity="center"
+                        android:layout_width="match_parent" android:layout_height="match_parent" />
+            </LinearLayout>
             <TextView
-                    android:id="@+id/plus_n_attachments_also"
-                    android:paddingStart="5dp"
-                    android:paddingEnd="5dp"
-                    android:gravity="center"
-                    android:layout_width="match_parent" android:layout_height="match_parent" />
+                    android:id="@+id/task_dates"
+                    android:textSize="12sp"
+                    android:gravity="center_vertical"
+                    android:drawableStart="@android:drawable/ic_menu_recent_history"
+                    android:layout_width="match_parent" android:layout_height="wrap_content"/>
         </LinearLayout>
     </LinearLayout>
 </com.project.trello_fintech.views.InterceptTouchCardView>
