--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,11 @@
             android:layout_gravity="end"
             android:layout_width="wrap_content"
             android:layout_height="match_parent">
-            <fragment
-                    android:id="@+id/fragment_users"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:name="com.project.trello_fintech.fragments.UsersFragment"
-                    android:layout_width="wrap_content" android:layout_height="match_parent" />
+<!--        <fragment-->
+<!--                android:id="@+id/fragment_users"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                android:name="com.project.trello_fintech.fragments.UsersFragment"-->
+<!--                android:layout_width="wrap_content" android:layout_height="match_parent" />-->
         <Button
                 android:id="@+id/trello_logout"
                 android:clickable="true"
