--- a/app/src/main/res/layout/fragment_task_detail.xml
+++ b/app/src/main/res/layout/fragment_task_detail.xml
@@ -67,6 +67,10 @@
                         android:paddingStart="10dp"
                         android:paddingEnd="10dp"
                         android:minHeight="50dp" />
+                <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/checklists"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
                 <com.project.trello_fintech.views.TaskDetailSectionView
                         app:iconSrc="@drawable/participants_icon"
                         app:text="@string/participants"
