checklists dialog fragment

--- a/app/src/main/res/layout/task_detail_section.xml
+++ b/app/src/main/res/layout/task_detail_section.xml
@@ -18,6 +18,10 @@
                 android:layout_gravity="center_vertical"
                 android:textSize="15sp"
                 android:textStyle="bold"
-                android:layout_width="match_parent" android:layout_height="wrap_content" />
+                android:layout_weight="1"
+                android:layout_width="0dp" android:layout_height="wrap_content" />
+        <androidx.appcompat.widget.ActionMenuView
+                android:id="@+id/actions_bar"
+                android:layout_width="wrap_content" android:layout_height="wrap_content"/>
     </LinearLayout>
 </merge>
