--- a/app/src/main/res/layout/checkitem_list_item.xml
+++ b/app/src/main/res/layout/checkitem_list_item.xml
@@ -11,5 +11,5 @@
             android:id="@+id/text"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
-            android:layout_width="match_parent" android:layout_height="wrap_content" />
+            android:layout_width="wrap_content" android:layout_height="wrap_content" />
 </LinearLayout>
