--- a/app/src/main/res/menu/tasks.xml
+++ b/app/src/main/res/menu/tasks.xml
@@ -6,4 +6,6 @@
                   android:title="@string/Gantt" />
         </menu>
     </item>
+    <item android:id="@+id/start_or_continue_videocall"
+          android:title="@string/start_or_continue_videocall"/>
 </menu>
