video call controllers

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="colorBlack">#000000</color>
     <color name="colorRed">#FF0000</color>
     <color name="colorBlackTransparent">#99000000</color>
+    <color name="colorBlueDark">#000033</color>
 </resources>
