--- a/app/src/main/res/layout/activity_videocall.xml
+++ b/app/src/main/res/layout/activity_videocall.xml
@@ -17,12 +17,31 @@
     <FrameLayout
             android:layout_width="90dp"
             android:layout_height="120dp"
+            android:visibility="gone"
             android:id="@+id/publisher_container"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/actions"
             android:layout_gravity="bottom|end"
-            android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
             android:padding="2dp"
-            android:background="#FFFFFF" />
+            android:background="#FFFFFF"/>
+    <com.google.android.flexbox.FlexboxLayout
+            android:id="@+id/actions"
+            android:paddingBottom="10dp"
+            app:justifyContent="space_around"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="match_parent" android:layout_height="wrap_content">
+        <ImageView
+                android:id="@+id/mute_mic"
+                android:background="@android:drawable/ic_btn_speak_now"
+                android:layout_width="60dp" android:layout_height="60dp"/>
+        <ImageView
+                android:id="@+id/stop_videocall"
+                android:background="@drawable/stop_videocall_icon"
+                android:layout_width="60dp" android:layout_height="60dp"/>
+        <ImageView
+                android:id="@+id/mute_video"
+                android:background="@android:drawable/presence_video_busy"
+                android:layout_width="60dp" android:layout_height="60dp"/>
+    </com.google.android.flexbox.FlexboxLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
