--- a/app/src/main/res/layout/subscriber_list_item.xml
+++ b/app/src/main/res/layout/subscriber_list_item.xml
@@ -6,6 +6,8 @@
         android:layout_height="135dp">
     <FrameLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
+                 android:padding="2dp"
+                 android:background="@color/colorWhite"
                  android:id="@+id/subscriber"/>
     <TextView android:id="@+id/username"
               android:textColor="@color/colorWhite"
