fix #7 + load board background image into appbarlayout in TaskDetailFragment.kt

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,8 +2,7 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">@color/colorBlueDark</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
@@ -13,6 +12,6 @@
     </style>
     
     <style name="TelegramLike" parent="AppTheme">
-        <item name="android:windowBackground">@color/colorBlueDark</item>
+        <item name="android:windowBackground">@color/colorBlueDarkest</item>
     </style>
 </resources>
