--- a/app/src/main/res/layout/fragment_task_detail.xml
+++ b/app/src/main/res/layout/fragment_task_detail.xml
@@ -14,12 +14,12 @@
         <com.google.android.material.appbar.AppBarLayout
                 app:layout_constraintTop_toTopOf="parent"
                 android:id="@+id/app_bar"
+                android:background="@color/colorWhite"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="25dp"
                 android:paddingBottom="25dp">
             <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbar"
                     app:title="@{viewModel.task.text}"
                     app:layout_constraintTop_toTopOf="parent"
                     android:layout_width="match_parent" android:layout_height="wrap_content" />
@@ -114,16 +114,6 @@
                         android:layout_width="match_parent" android:layout_height="wrap_content"/>
             </LinearLayout>
         </ScrollView>
-
-        <include layout="@layout/add_button" android:id="@+id/task_action" />
-        <com.project.trello_fintech.views.DropDownListView
-                android:id="@+id/task_actions"
-                android:background="@color/colorGreenDark"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/task_action"
-                android:divider="@null"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content" />
 
         <com.project.trello_fintech.views.CircularProgressBar
                 android:visibility="@{viewModel.isLoading? View.VISIBLE: View.GONE}"
