--- a/app/src/main/res/menu/task_detail.xml
+++ b/app/src/main/res/menu/task_detail.xml
@@ -2,4 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:title="@string/add_checklist"
           android:id="@+id/add_checklist"/>
+    <item android:title="@string/upload_attachment"
+          android:id="@+id/add_attachment" />
 </menu>
