--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="colorBlack">#000000</color>
     <color name="colorRed">#FF0000</color>
     <color name="colorBlackTransparent">#99000000</color>
-    <color name="colorBlueDark">#000033</color>
+    <color name="colorBlueDark">#00004d</color>
+    <color name="colorBlueDarkest">#000033</color>
 </resources>
